--- a/main.yaml
+++ b/main.yaml
@@ -2,8 +2,7 @@
 # stage classes.  Any stages imported in these
 # modules are automatically detected and their names can
 # be used below
-modules: 
-  - psf_pipeline
+modules: psf_pipeline
 
 # The launcher to use
 # These are defined in ceci/sites
