--- a/detect_config.yaml
+++ b/detect_config.yaml
@@ -1,4 +1,4 @@
-detection_threshold: 1.2
+detection_threshold: 10 #1.2
 background_subtraction: True
 err: rms
 segmentation_map: True
@@ -10,6 +10,7 @@ filter_kernel: detection_kernels/roman_kernel_FWHM_1.2_10x10.txt
 photometry_method:
   kron:
     multiplicative_factor: 2.5
+    flux_rad_fraction: 0.5
   aperture:
     radii: 
       - 3
